Add Meta Tag for SEO

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee Shop</title>
+    <meta property="description" content="Sample E-Commerce Web Application" />
+    <meta property="og:title" content="Coffee Shop">
+    <meta property="og:description" content="Sample E-Commerce Web Application" />
+    <meta property="og:site_name" content="Sample E-Commerce Web Application" />
+    <meta property="og:image" content="/images/home-open-graph.png">
+    <meta property="twitter:title" content="Coffee Shop">
+    <meta property="twitter:description" content="Sample E-Commerce Web Application" />
+    <meta property="twitter:image" content="/images/home-open-graph.png">
+    <meta property="twitter:card" content="/images/home-open-graph.png">
   </head>
   <body>
     <div id="root"></div>
